--- a/style.css
+++ b/style.css
@@ -82,18 +82,18 @@ body {
 .mainImage img {
     width: 40vw;
     position: absolute;
-    top: 80px;
-    right: 60px;
+    top: 10vh;
+    right: 6vw;
     z-index: 1;
 }
 
 .TitleOfImage {
     background-color: rgb(0, 0, 0, 0.8);
     height: 50px;
-    width: 450px;
+    width: 40vw;
     position: absolute;
-    top: 80px;
-    right: 60px;
+    top: 10vh;
+    right: 6vw;
     z-index: 2;
 }
 
