--- a/style.css
+++ b/style.css
@@ -124,20 +124,20 @@ body {
 
 .view {
     position: absolute;
-    top: 120px;
-    left: 100px;
+    top: 22vh;
+    left: 8vw;
     z-index: 1;
     width: 400px;
     color: white;
 }
 
 .view h1 {
-    font-size: 20px;
+    font-size: 1.3em;
     margin-bottom: 12px;
 }
 
 .view p {
-    font-size: 10px;
+    font-size: 0.6em;
     margin-bottom: 14px;
 }
 
