--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+   /* box-sizing: border-box; /*
      font-family: "Inter", sans-serif;
 }
 
@@ -15,7 +15,7 @@ body {
 /*================= Sec 0 : About College ======================*/
 
 .college {
-    height: 70px;
+    height: 100px;
     display: flex;
     align-items: center;
 }
