--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 * {
     margin: 0;
     padding: 0;
-   /* box-sizing: border-box; /*
+   box-sizing: border-box;
      font-family: "Inter", sans-serif;
 }
 
@@ -15,26 +15,26 @@ body {
 /*================= Sec 0 : About College ======================*/
 
 .college {
-    height: 100px;
+    height: 85px;
     display: flex;
     align-items: center;
 }
 
 .college img {
     padding-left: 30px;
-    height: 45px;
+    height: 55px;
     padding-right: 15px;
 }
 
 .college .collegeName a {
     text-decoration: none;
     color: black;
-    font-size: 0.6em;
+    font-size: 13px;
 }
 
 .college .collegeName p {
     margin-bottom: -5px;
-    font-size: 1.3em;
+    font-size: 24px;
     font-weight: 600;
 }
 
