--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
 }
 
 .home {
+    box-shadow: inset 0.8px 0.8px 30px rgba(0,0,0,0.5);
     background: linear-gradient(90deg, #002244, #0C5CAC);
     height: calc(100vh - 140px);
     object-fit: cover;
