--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
@@ -40,25 +42,31 @@ body {
 
 /* ==================Sec 1: navbar========================  */
 
+/* .navbar{
+    background-color: rgba(30, 42, 120, 1);
+}
 
-.navbar {
+.navbar a{
+    margin: 0px 2vw 0px;
+} */
+
+.navbarr {
     width: 100%;
-    /* why I can use 100vw */
     height: 60px;
     background-color: rgba(30, 42, 120, 1);
 }
 
-.navtxt {
+.navtxtt {
     display: flex;
     justify-content: space-around;
     align-items: center;
     max-width: 800px;
     margin: auto;
     background-color: rgba(30, 42, 120, 1);
-    height: 60px;
+    height: 100%;
 }
 
-.navtxt a {
+.navtxtt a {
     text-decoration: none;
     color: white;
     background-color: rgba(30, 42, 120, 1);
@@ -67,16 +75,15 @@ body {
 
 }
 
-.navtxt a:hover {
+.navtxtt a:hover {
     transform: scale(1.07);
     text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.74);
 }
 
 .home {
-    box-shadow: inset 0.8px 0.8px 30px rgba(0,0,0,0.5);
+    box-shadow: inset 0.8px 0.8px 30px rgba(0, 0, 0, 0.5);
     background: linear-gradient(90deg, #002244, #0C5CAC);
     height: calc(100vh - 140px);
-    object-fit: cover;
     position: relative;
 }
 
@@ -86,7 +93,7 @@ body {
     top: 10vh;
     right: 6vw;
     z-index: 1;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 }
 
 .TitleOfImage {
@@ -131,7 +138,7 @@ body {
     top: 19vh;
     left: 8vw;
     z-index: 1;
-    width: 500px;
+    width: 35vw;
     color: white;
 }
 
@@ -157,6 +164,8 @@ body {
     background: linear-gradient(90deg, rgb(19, 129, 231), rgba(8, 74, 188, 1));
 }
 
+
+
 #view:hover {
     scale: 1.05;
 }
@@ -172,14 +181,14 @@ body {
 }
 
 .videosec video {
-    width: 700px;
+    width: 50vw;
     margin-bottom: 5px;
     border-radius: 12px;
 }
 
 .trackRecords {
     height: 100px;
-    width: 700px;
+    width: 50vw;
     background-color: rgb(255, 255, 255);
     border-radius: 12px;
     display: flex;
@@ -199,11 +208,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .trackRecords .track h2 {
     font-size: 25px;
-    margin-bottom: 8px;
     font-family: "Inter", sans-serif;
     font-weight: 300;
 }
@@ -212,11 +221,13 @@ body {
 .trackRecords .track :nth-child(2) {
     font-size: 8px;
     color: rgba(0, 0, 0, 0.5);
+    margin-bottom: -2px;
 }
 
 .trackRecords .track :nth-child(3) {
     color: rgba(0, 0, 0, 0.5);
     font-size: 8px;
+    margi
 }
 
 /* ========================Sec 3 : Introduction =========================== */
@@ -240,9 +251,9 @@ body {
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.031);
 }
 
-.paragraph img:hover{
-transform: scale(1.01);
-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.085);
+.paragraph img:hover {
+    transform: scale(1.01);
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.085);
 }
 
 .paragraph .txt {
@@ -255,7 +266,7 @@ box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.085);
     font-size: 13px;
 }
 
-.paragraph .txt h2{
+.paragraph .txt h2 {
     margin-top: 15px;
     font-size: 22px;
 }
@@ -283,11 +294,11 @@ box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.085);
     height: 600px;
 }
 
-.message h1{
+.message h1 {
     padding-bottom: 30px;
 }
 
-.container {
+.ccontainer {
     max-width: 80vw;
     margin: auto;
     display: flex;
@@ -314,7 +325,7 @@ box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.085);
     margin-bottom: 72px;
 }
 
-.container .cards img {
+.ccontainer .cards img {
     margin-bottom: -30px;
     border-radius: 500px;
     width: 80px;
@@ -411,9 +422,9 @@ footer {
     transition: transform 0.2s ease-in-out;
 }
 
-.icons img:hover{
+.icons img:hover {
     transform: scale(1.15);
-} 
+}
 
 .footerTXT {
     /* opacity: 0.45; */
@@ -429,9 +440,9 @@ footer {
     transition: transform 0.15s ease-in-out;
 }
 
-.footerTXT a:hover{
+.footerTXT a:hover {
     color: rgba(255, 255, 255, 0.558);
-transform: scale(1.09);
+    transform: scale(1.09);
 }
 
 .column {
@@ -462,7 +473,6 @@ transform: scale(1.09);
     margin-top: 30px;
     opacity: 0.45;
 }
-
 
 @media (max-width: 480px) {
 
