--- a/style.css
+++ b/style.css
@@ -306,8 +306,8 @@ body {
     width: 340px;
     margin: auto;
     border-radius: 22px;
-    box-shadow: 0 4px 25px rgba(0, 255, 255, 0.05);
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    box-shadow: 0 6px 25px rgba(0, 255, 255, 0.04);
+    border: 1px solid rgba(0, 0, 0, 0.089);
     transition: transform 0.2s ease;
 }
 
@@ -497,29 +497,29 @@ footer {
     .home {
         display: flex;
         flex-direction: column-reverse;
-        justify-content: center;
-        height: calc(80vh - 130px);
         align-items: center;
-    }
+        justify-content:space-evenly;
+        height: calc(80vh - 130px);
+        gap: -20px;
 
+    }
 
     .mainImage img {
-        width: 70vw;
-        position: unset;
-        margin: 5vh 0px 6vh;
+        width: 80vw;
+        position:unset;
+        margin: -60px 0 -80px;
     }
-
-
 
     .view {
         background-color: none;
         position: unset;
-        width: 70vw;
+        width: 80vw;
     }
 
     .view h1 {
         font-size: 20px;
         margin-bottom: 14px;
+        margin-top: -0px;
     }
 
 
@@ -548,20 +548,20 @@ footer {
 
     .trackRecords {
         width: 85vw;
-        height: 70px;
+        height: 85px;
     }
 
     .trackRecords .track h2 {
-        font-size: 18px;
+        font-size: 21px;
         margin-top: 10px;
     }
 
     .trackRecords .track :nth-child(2) {
-        font-size: 6px;
+        font-size: 9px;
     }
 
     .trackRecords .track :nth-child(3) {
-        font-size: 6px;
+        font-size: 9px;
     }
 
     /* sec 3: .introduction  */
@@ -572,6 +572,7 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap:0px;
     }
 
     .introduction :nth-child(2) {
@@ -579,7 +580,7 @@ footer {
     }
 
     .paragraph .txt {
-        width: 75vw;
+        width: 85vw;
     }
 
     .paragraph .txt p {
@@ -587,7 +588,7 @@ footer {
     }
 
     .paragraph img {
-        width: 75vw;
+        width: 85vw;
     }
 
 
@@ -614,7 +615,7 @@ footer {
 }
 
     .cards {
-        width: 65vw;
+        width: 70vw;
         padding: 0px 25px 0px;
         border-radius: 30px;
     }
@@ -646,7 +647,7 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 25px;
+        gap: 7vh;
     }
 
     .collegeDetails{
@@ -683,7 +684,7 @@ footer {
     }
 
     .footerTXT{
-        justify-content: space-between;
+        justify-content: space-around;
         display: flex;
         width: 88%;
     }
@@ -699,5 +700,7 @@ footer {
     }
 
 }
+
+
 
 
