--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
     font-family: "Inter", sans-serif;
 }
 
-body {
-    background-color: #86A5C4;
+body{
+    /* background-color: #86A5C4; */
+    /* background-color: red; */
 }
 
 /*================= Sec 0 : About College ======================*/
@@ -170,7 +171,7 @@ body {
 /* ========================Sec 2: Video =============== */
 
 .videosec {
-    height: 700px;
+    height: 110vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -230,9 +231,12 @@ body {
 /* ========================Sec 3 : Introduction =========================== */
 
 .introduction {
+    padding: 10vh 0px 10vh;
+    background-color: rgba(186,215,243,1);
     display: flex;
     flex-direction: column;
     gap: 35px;
+    box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.41);
 }
 
 .paragraph {
@@ -242,7 +246,7 @@ body {
 }
 
 .paragraph img {
-    width: 380px;
+    width: 30vw;
     border-radius: 6px;
     transition: transform 0.2s ease-in-out;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.031);
@@ -254,13 +258,13 @@ body {
 }
 
 .paragraph .txt {
-    width: 40vw;
+    width: 45vw;
 }
 
 .paragraph .txt p {
     margin-top: 13px;
     text-align: justify;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .paragraph .txt h2 {
@@ -716,6 +720,7 @@ footer {
     }
 
 }
+
 
 
 
